2005-08-28  Owen Taylor  <otaylor@redhat.com>

	* src/fbmmx.c (detectCPUFeatures): Use local labels rather than
	global labels in the assembly, to be robust if the code is inlined
	in multiple places. (#4283, Reported by Marco Manfredini)

2005-08-27  Billy Biggs  <vektor@dumbterm.net>

	Some fixes for warnings from sparse (Part of bug #4208,
	Kjartan Maraas)

	* src/fbcompose.c (fetchProcForPicture),
	(fetchPixelProcForPicture), (storeProcForPicture), (fbFetchSolid),
	(fbFetch), (fbFetchTransformed), (fbStore), (fbStoreExternalAlpha),
	(fbCompositeRect):
	* src/fbpict.c (pixman_composite):
	* src/icbltone.c (fbLaneTable), (fbBltOne):
	* src/icimage.c (pixman_image_init), (pixman_image_set_transform):
	* src/icrect.c (pixman_fill_rectangles):
	* src/ictrap.c (FbCreateAlphaPicture):   Use NULL not 0.

2005-08-27  Owen Taylor  <otaylor@redhat.com>

	* src/fbmmx.c (detectCPUFeatures): Make the code work with
	-fomit-frame-pointer by making sure that %esp isn't modified at
	the point where we access output operands. (#4269, Patch from
	Ronald Wahl)
	
2005-08-22  Owen Taylor  <otaylor@redhat.com>

	* src/pixregion.c (pixman_region_union_rect): When width/height
	are 0, copy the src to the dest, don't just return. (#3017)

2005-08-21  Billy Biggs  <vektor@dumbterm.net>

	* src/pixman-remap.h: Fix a typo in the last change.

2005-08-21  Billy Biggs  <vektor@dumbterm.net>

	* src/fbpict.c: Remove warning about fbCompositeTrans_0888xnx0888 not
	being tested on big-endian, it's not helpful at this point.

	* src/pixman-remap.h: Only define _cairo_pixman_have_mmx for fbHaveMMX
	when the symbol will actually exist.

2005-08-21  Billy Biggs  <vektor@dumbterm.net>

	Fix for bug #4140:

	* src/icrect.c: (pixman_fill_rect_8bpp): Dereference the pixel value
	correctly on big endian systems.

2005-08-18  Billy Biggs  <vektor@dumbterm.net>

	* src/fbmmx.c: (mmxCombineMaskU), (mmxCombineOverU): Special case
	alpha values of 0 and 0xff.